--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "react-scripts build && gh-pages -d build",
+    "dev":"react-scripts build && react-scripts start"
   },
   "eslintConfig": {
     "extends": [
