--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.0.4",
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^3.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +26,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "react-scripts build && gh-pages -d build",
-    "dev":"react-scripts build && react-scripts start"
+    "dev": "react-scripts build && react-scripts start"
   },
   "eslintConfig": {
     "extends": [
