--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
   "devDependencies": {
     "@types/react": "^19.0.10",
     "gh-pages": "^6.3.0",
-    "tailwindcss": "3"
+    "tailwindcss": "^3.4.17"
   }
 }
