--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Ensure Node.js is available
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "18"
 
       - name: Update package.json version if different
         run: |
