--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "devDependencies": {
     "@types/react": "^19.0.10",
     "gh-pages": "^6.3.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^3.4.17"
   }
 }
